# Rosmontis-Bot

./: Cargo.toml  README.md
.github/workflows/: rust.yml
plugins/chat/: Cargo.toml
plugins/chat/src/: commands.rs  config.rs  lib.rs  mcp_loader.rs  message.rs  openai_api.rs  user_manager.rs
plugins/chat/src/function_register/: image.rs  mod.rs  seedream.rs  status.rs
src/: main.rs
