[package]
name = "ros-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chat = { version = "0.1.0", path = "plugins/chat" }
kovi = "0.12.5"
kovi-plugin-cmd = "0.3.0"
tokio = { version = "1.48.0", features = ["full"] }

[workspace]
members = ["plugins/chat"]

[workspace.dependencies]
kovi = "0.12.5"
