[package]
name = "ros-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chat = { version = "0.1", path = "plugins/chat" }
kovi = "0.12"
kovi-plugin-cmd = "0.3"

[workspace]
members = ["plugins/chat"]

[workspace.dependencies]
kovi = "0.12"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1